Bug 468353 - designmode.css is not removed after designMode is turned off; r=bzbarsky sr=(bzbarsky + peterv)